# swapi

./: .gitignore  .sops.yaml  Dockerfile  README.md  env.example  pyproject.toml
.dlt/: secrets.toml.example
.github/workflows/: main.yml
dagster/: __init__.py  assets.py
dagster/dlt/: swapi.py
dagster_project/: __init__.py  assets.py  jobs.py  schedules.py
dagster_project/assets/: swapi.py
dagster_project/resources/: __init__.py
data_sources/: swapi.py
dlt/: rest_api_dlt.py
secrets/: shhh.env
swapi/: __init__.py  assets.py  pyproject.toml
