[tool.poetry]
name = "swapi"
version = "0.1.0"
description = ""
authors = ["Alexander Reinthal <reinthal@pm.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.14"
dagster = "~1.7.8"
dagster-duckdb = "^0.23.8"
requests = "^2.32.3"
dagster-snowflake-pandas = "0.23.10"

[tool.poetry.group.dev.dependencies]
dagster-webserver = "~1.7.8"
ipython = "^8.25.0"
pandas = "^2.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.dagster]
module_name = "swapi"